# agentic-ai

./: .gitignore  README.md  deep_research_recreated.ipynb  openai_agents_sdk.ipynb  requirements.txt  simple_jokester_agent.ipynb
autonomous_traders_with_mcp/: 1_.ipynb  requirements.txt
crewai/: engineering_team.ipynb  requirements.txt
crewai/my_team/: README.md  pyproject.toml
crewai/my_team/src/my_team/: crew.py  main.py
crewai/my_team/src/my_team/config/: agents.yaml  tasks.yaml
langchain/: README.md  langchainchatmodels_initchatmodel_gpt41.ipynb  langchainopenai_chatopenai_gpt5.ipynb  langchainopenai_openai_gpt35.ipynb  openai_openai_gpt5.ipynb  requirements.txt
openai_agents_sdk/: README.md
trading_floor/: 1_.ipynb  README.md
