[project]
name = "my_team"
version = "0.1.0"
description = "my_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
my_team = "my_team.main:run"
run_crew = "my_team.main:run"
train = "my_team.main:train"
replay = "my_team.main:replay"
test = "my_team.main:test"
run_with_trigger = "my_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
